--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.0.*",
