--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-sass": "*",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-countdown-now": "^2.1.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
