--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "optimize-css-assets-webpack-plugin": "*",
     "postcss": "*",
     "postcss-loader": "*",
-    "sass-loader": "*",
     "style-loader": "*",
     "stylelint": "*",
     "stylelint-config-recommended": "*",
@@ -55,6 +54,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "sass-loader": "^10.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "uglifyjs-webpack-plugin": "*"
