--- a/backend/composer.json
+++ b/backend/composer.json
@@ -63,7 +63,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "5.0.*"
+            "require": "^5.0"
         }
     }
 }
