--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,7 +15,8 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.14",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "symfony/http-kernel": "5.1.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3"
