--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "harkhenon/quizztg",
+    "description": "QuizzTG - L'outil d'apprentissage du Tri Général pour les Facteurs",
+    "version": "1.0",
     "type": "project",
     "license": "proprietary",
     "require": {
@@ -10,12 +13,12 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/cors-bundle": "^2.1",
         "symfony/apache-pack": "^1.0",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
+        "symfony/console": "5.1.7",
+        "symfony/dotenv": "5.1.7",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.0.*",
+        "symfony/framework-bundle": "5.1.7",
         "symfony/maker-bundle": "^1.14",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.1.7"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3"
@@ -63,7 +66,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "^5.0"
+            "require": "5.1.7"
         }
     }
 }
